feat: add lists of borrowing records
