# api-gateway/docs/swagger.json
@@ -599,6 +599,66 @@
                 }
             }
         },
+        "/borrow-book/records": {
+            "get": {
+                "description": "Retrieve a paginated list of borrowing records from the gRPC service",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BorrowBook"
+                ],
+                "summary": "Get a list of borrowing records",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Number of items per page",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetBorrowingRecordsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/borrow-book/return": {
             "post": {
                 "description": "User return a book from the gRPC service",
@@ -1030,6 +1090,24 @@
                 }
             }
         },
+        "dto.BorrowingRecords": {
+            "description": "BorrowingRecords details",
+            "type": "object",
+            "properties": {
+                "book_id": {
+                    "type": "integer"
+                },
+                "borrowed_at": {
+                    "type": "string"
+                },
+                "returned_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.Category": {
             "description": "Category details",
             "type": "object",
@@ -1215,6 +1293,18 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/dto.Book"
+                    }
+                }
+            }
+        },
+        "dto.GetBorrowingRecordsResponse": {
+            "description": "A list of borrowing records",
+            "type": "object",
+            "properties": {
+                "borrowing_records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.BorrowingRecords"
                     }
                 }
             }
