# api-gateway/handler/borrowing_record_handler.go
@@ -9,6 +9,7 @@ import (
 	"github.com/hariszaki17/library-management/api-gateway/config"
 	"github.com/hariszaki17/library-management/api-gateway/handler/dto"
 	"github.com/hariszaki17/library-management/api-gateway/handler/middleware"
+	"github.com/hariszaki17/library-management/api-gateway/helper"
 	"github.com/hariszaki17/library-management/proto/constants"
 	pb "github.com/hariszaki17/library-management/proto/gen/user/proto"
 	"github.com/hariszaki17/library-management/proto/logging"
@@ -28,6 +29,7 @@ func NewBorrowingRecordHandler(g *echo.Group, userRPC pb.UserServiceClient, auth
 	}
 
 	g.POST("", handler.UserBorrowBook, authMiddleware)
+	g.GET("/records", handler.GetBorrowingRecords, authMiddleware)
 	g.POST("/return", handler.UserReturnBook, authMiddleware)
 }
 
@@ -155,4 +157,70 @@ func (h *BorrowingRecordHandler) UserReturnBook(c echo.Context) error {
 	}).Info("Successfully user return a book")
 
 	return c.JSON(http.StatusOK, dto.ToUserReturnBookResponse("Successfully user return a book"))
+}
+
+// GetBorrowingRecords godoc
+// @Summary Get a list of borrowing records
+// @Description Retrieve a paginated list of borrowing records from the gRPC service
+// @Tags BorrowBook
+// @Accept json
+// @Produce json
+// @Param page query int true "Page number" default(1)
+// @Param limit query int true "Number of items per page" default(10)
+// @Param Authorization header string true "Bearer token" Example: Bearer xxx"
+// @Success 200 {object} dto.GetBorrowingRecordsResponse
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /borrow-book/records [get]
+func (h *BorrowingRecordHandler) GetBorrowingRecords(c echo.Context) error {
+	pageStr := c.QueryParam("page")
+	limitStr := c.QueryParam("limit")
+
+	requestID := middleware.GetRequestID(c)
+	userID := middleware.GetUserID(c)
+	logger := logging.Logger.WithField("requestID", requestID)
+
+	logger.WithFields(logrus.Fields{
+		"serviceName": config.Data.ServiceName,
+		"handler":     "GetBorrowingRecords",
+		"userID":      userID,
+	}).Info("Fetching borrowing records")
+
+	page, err := strconv.ParseInt(pageStr, 10, 64)
+	if err != nil {
+		logger.WithError(err).Error("Invalid page")
+		return c.JSON(http.StatusBadRequest, dto.ErrorResponse{Message: "Invalid page"})
+	}
+
+	limit, err := strconv.ParseInt(limitStr, 10, 64)
+	if err != nil {
+		logger.WithError(err).Error("Invalid limit")
+		return c.JSON(http.StatusBadRequest, dto.ErrorResponse{Message: "Invalid limit"})
+	}
+
+	if err := helper.ValidatePageLimit(int(page), int(limit)); err != nil {
+		logger.WithError(err).Error("Invalid pagination")
+		return c.JSON(http.StatusBadRequest, dto.ErrorResponse{Message: err.Error()})
+	}
+
+	// Create gRPC context with metadata
+	md := metadata.Pairs(
+		constants.RequestIDKeyCtx, requestID,
+		constants.UserIDKeyCtx, userID)
+	grpcCtx := metadata.NewOutgoingContext(c.Request().Context(), md)
+
+	req := &pb.GetBorrowingRecordsRequest{Page: uint64(page), Limit: uint64(limit)}
+	resp, err := h.userRPC.GetBorrowingRecords(grpcCtx, req)
+	if err != nil {
+		logger.WithError(err).Error("Failed to get books from gRPC server")
+		return c.JSON(http.StatusInternalServerError, dto.ErrorResponse{Message: "Internal server error"})
+	}
+
+	logger.WithFields(logrus.Fields{
+		"serviceName": config.Data.ServiceName,
+		"handler":     "GetBorrowingRecords",
+		"userID":      userID,
+	}).Info("Successfully fetched borrowing books")
+
+	return c.JSON(http.StatusOK, dto.ToGetBorrowingRecordsResponse(resp.BorrowingRecords))
 }
